[gd_scene load_steps=3 format=3 uid="uid://c7f61v3x0g61n"]

[ext_resource type="Script" uid="uid://4566r515fu07" path="res://hud/seed_packet.gd" id="1_dlbwk"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_u4vev"]
size = Vector2(128, 128)

[node name="SeedPacket" type="Button"]
custom_minimum_size = Vector2(256, 288)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1664.0
offset_bottom = -792.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dlbwk")

[node name="BackgroundPanel" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
color = Color(0.78, 0.429, 0.57525, 1)

[node name="SeedTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("PlaceholderTexture2D_u4vev")
stretch_mode = 3

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 20.0
offset_right = 70.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "CROP NAME"

[node name="AmountLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -33.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "x1"
horizontal_alignment = 1
